# interesting-games

./: .gitignore  WORKSPACE.bazel
.github/: format-all.py
.github/workflows/: blaze-tests.yml
bindings/: BUILD.bazel  game_2048.cpp
environments/: BUILD.bazel  main.cpp
environments/game_2048/: game_state.cpp  game_state.hpp  game_state.test.cpp
environments/meta/: games.hpp
games/: BUILD.bazel  main.cpp
games/game_2048/: game_state.cpp  game_state.hpp  game_state.test.cpp
models/: BUILD.bazel
models/mcts/: mcts.cpp  mcts.hpp  mcts.test.cpp  memory.cpp  memory.hpp  memory.test.cpp
python/: BUILD.bazel  bindings.cpp  bindings_game_2048.cpp  test_env.py  test_game_2048.py
