cc_library(
    name = "environments",
    hdrs = [
        "meta/games.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "game_2048",
    hdrs = [
        "game_2048/game_state.hpp",
    ],
    srcs = [
        "game_2048/game_state.cpp",
    ],
    deps = [
        ":environments",
        "@fmt",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_game_2048",
    size = "small",
    srcs = [
        "game_2048/game_state.test.cpp",
    ],
    deps = [
        ":game_2048",
        "@com_google_googletest//:gtest_main",
    ],
)
