cc_library(
    name = "game_2048",
    srcs = [
        "game_2048/game_state.cpp",
    ],
    hdrs = [
        "game_2048/game_state.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
    ],
)

cc_test(
    name = "test_game_2048",
    size = "small",
    srcs = [
        "game_2048/game_state.test.cpp",
    ],
    deps = [
        ":game_2048",
        "@com_google_googletest//:gtest_main",
    ],
)
