cc_library(
    name = "memory",
    srcs = [
        "mcts/memory.cpp",
    ],
    hdrs = [
        "mcts/memory.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@//environments:game_2048",
    ],
)

cc_test(
    name = "test_memory",
    size = "small",
    srcs = [
        "mcts/memory.test.cpp",
    ],
    deps = [
        ":memory",
        "@//environments:game_2048",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "mcts",
    srcs = [
        "mcts/mcts.cpp",
    ],
    hdrs = [
        "mcts/mcts.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":memory",
        "@//environments:game_2048",
    ],
)

cc_test(
    name = "test_mcts",
    size = "small",
    srcs = [
        "mcts/mcts.test.cpp",
    ],
    deps = [
        ":mcts",
        "@com_google_googletest//:gtest_main",
    ],
)
