load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

cc_binary(
    name = "reinterest.so",
    srcs = ["bindings.cpp"],
    copts = ["-Iexternal/pybind"],
    linkshared = 1,
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@//environments:game_2048",
        "@pybind11//:pybind11_embed",
    ],
)

py_library(
    name = "reinterest.bindings",
    data = [":reinterest.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_game_2048",
    timeout = "short",
    srcs = ["test_game_2048.py"],
    legacy_create_init = False,
    python_version = "PY3",
    deps = [":reinterest.bindings"],
)
